--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+@import './assets/styles/primeng-custom.scss';
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #404C51;
+  background-color: whitesmoke;
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+    margin: 0 auto;
+  }
+}
+
+.rightSideButton {
+  margin-left: 5px !important;
+}
+
+.labelBold {
+  font-weight: bold;
+}
