--- a/src/app/produtos/produtos-pesquisa/produtos-pesquisa.component.scss
+++ b/src/app/produtos/produtos-pesquisa/produtos-pesquisa.component.scss
@@ -29,6 +29,10 @@
     width: 120px;
     text-align: center !important;
   }
+
+  .col-categoria {
+    width: 200px;
+  }
 }
 
 @media screen and (max-width: 40rem) {
