--- a/src/app/mercados/mercados-cadastro/mercados-cadastro.component.html
+++ b/src/app/mercados/mercados-cadastro/mercados-cadastro.component.html
@@ -14,8 +14,9 @@
 
           <div class="p-field p-col-12 p-md-4 p-fluid">
             <label class="labelBold" for="cnpj">CNPJ: </label>
-            <input mask="00.000.000/0000-00" formControlName="cnpj" pInputText id="cnpj" type="tel"
-              [dropSpecialCharacters]="false">
+            <input mask="00.000.000/0000-00" formControlName="cnpj" [dropSpecialCharacters]="false"
+              [style.background-color]="editando ? '#f2f2f2' : 'white' " pInputText id="cnpj" type="tel"
+              [readonly]="editando">
           </div>
 
           <div class="p-field p-col-12 p-md-3 p-fluid p-field-mobile-none"></div>
@@ -43,13 +44,18 @@
           </div>
 
 
-          <div class="p-col-12">
+          <div class="p-col-12 p-md-6">
+            <button class="buttonActions" pButton type="button" icon="pi pi-file" [routerLink]="['/mercados/novo']"
+              label="Novo"></button>
+          </div>
 
-            <button [disabled]="formulario.invalid" class="buttonRight rightSideButton" pButton type="submit"
-              icon="pi pi-save" label="Salvar"></button>
+          <div class="p-col-12 p-md-6">
 
-            <button class="buttonRight p-button-success" pButton type="button" icon="pi pi-arrow-circle-left"
-              [routerLink]="['/mercados']" label="Voltar"></button>
+            <button [disabled]="formulario.invalid" class="buttonRight rightSideButton buttonActions" pButton
+              type="submit" icon="pi pi-save" label="Salvar"></button>
+
+            <button class="buttonRight p-button-success buttonActions" pButton type="button"
+              icon="pi pi-arrow-circle-left" [routerLink]="['/mercados']" label="Voltar"></button>
 
           </div>
 
@@ -100,9 +106,27 @@
             <input formControlName="estado" pInputText id="estado" type="text" name="estado">
           </div>
 
-          <div class="p-field p-col-12 p-md-2 p-fluid">
+          <div class="p-field p-col-12 p-md-3 p-fluid">
             <label class="labelBold" for="telefone">Telefone: </label>
-            <input pInputText id="telefone" type="text" name="telefone">
+            <input mask="(00) 00000-0009" pInputText id="telefone" type="text" name="telefone"
+              [dropSpecialCharacters]="false" [(ngModel)]="telefoneAdicionar" [ngModelOptions]="{standalone: true}">
+          </div>
+
+          <div class="p-field p-col-12 p-md-1 p-fluid">
+            <button class="buttonForm p-button-outlined" pButton type="button" icon="pi pi-plus" tooltipPosition="top"
+              pTooltip="Adicionar Telefone" (click)="adicionarTelefone()" [disabled]="!habilitaAdicionarTelefone()"></button>
+          </div>
+
+          <div class="p-field p-col-12 p-md-8">
+
+            <span *ngFor="let telefone of this.formulario.value.logradouro.telefones">
+              <span class="tag-telefone">
+                <i (click)="removerTelefone(telefone)" class="pi pi-times tag-telefone-icon"></i>
+                {{ telefone }}
+              </span>
+            </span>
+
+
           </div>
 
         </div>
