--- a/src/app/mercados/mercados-pesquisa/mercados-pesquisa.component.html
+++ b/src/app/mercados/mercados-pesquisa/mercados-pesquisa.component.html
@@ -11,8 +11,11 @@
 
       <div class="p-field p-col-12 p-md-6 p-fluid">
         <label class="labelBold" for="mercadoPesquisa">Perquisa: </label>
-        <input pInputText placeholder="Digite Um Mercado Para Pesquisa" id="mercadoPesquisa" type="text"
-          [(ngModel)]="filtro.nome" name="mercadoPesquisa">
+        <span class="p-input-icon-right">
+          <i *ngIf="filtro.nome" (click)="limparPesquisa()" class="pi pi-times"></i>
+          <input pInputText placeholder="Digite Um Mercado Para Pesquisa" id="mercadoPesquisa" type="text"
+            [(ngModel)]="filtro.nome" name="mercadoPesquisa">
+        </span>
       </div>
 
       <div class="p-field p-col-12 p-md-2">
@@ -32,9 +35,10 @@
     <div class="p-col-12">
       <p-card>
 
-        <p-table [value]="mercados" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
+        <p-table [value]="mercados" [paginator]="true" [rows]="filtro.itensPorPagina" [showCurrentPageReport]="true"
           currentPageReportTemplate="Exibindo {first} a {last} de {totalRecords} registros"
-          styleClass="p-datatable-responsive-demo">
+          styleClass="p-datatable-responsive-demo" [totalRecords]="totalDeRegistros" [lazy]="true"
+          (onLazyLoad)="mudarPagina($event)">
 
           <ng-template pTemplate="header">
             <tr>
@@ -73,9 +77,9 @@
               <td class="col-acoes">
                 <span class="p-column-title"></span>
                 <span *ngIf="mercado.status === 'ATIVO'" tooltipPosition="top" pTooltip="Desabilitar"
-                  class="p-tag p-tag-success p-tag-stutus" (click)="alterarStatus(mercado.id)">Ativo</span>
+                  class="p-tag p-tag-success p-tag-stutus" (click)="alterarStatus(mercado)">Ativo</span>
                 <span *ngIf="mercado.status !== 'ATIVO'" tooltipPosition="top" pTooltip="Habilitar"
-                  class="p-tag p-tag-danger p-tag-stutus" (click)="alterarStatus(mercado.id)">Inativo</span>
+                  class="p-tag p-tag-danger p-tag-stutus" (click)="alterarStatus(mercado)">Inativo</span>
               </td>
 
               <td class="col-acoes">
