--- a/src/app/produtos/produtos-pesquisa/produtos-pesquisa.component.html
+++ b/src/app/produtos/produtos-pesquisa/produtos-pesquisa.component.html
@@ -77,10 +77,7 @@
 
               <td class="col-acoes">
                 <span class="p-column-title"></span>
-                <span *ngIf="produto.status === 'ATIVO'" tooltipPosition="top" pTooltip="Desabilitar"
-                  class="p-tag p-tag-success p-tag-stutus" (click)="alterarStatus(produto)">Ativo</span>
-                <span *ngIf="produto.status !== 'ATIVO'" tooltipPosition="top" pTooltip="Habilitar"
-                  class="p-tag p-tag-danger p-tag-stutus" (click)="alterarStatus(produto)">Inativo</span>
+                <app-tag-button [value]="produto.status" (alterValue)="alterarStatus(produto)"></app-tag-button>
               </td>
 
               <td class="col-acoes">
