--- a/src/app/produtos/produtos-cadastro/produtos-cadastro.component.html
+++ b/src/app/produtos/produtos-cadastro/produtos-cadastro.component.html
@@ -32,7 +32,7 @@
           <div class="p-field p-col-12 p-md-4 p-fluid">
             <label class="labelBold" for="codigoDeBarras">Codigo De Barras: </label>
             <input [readonly]="editando" formControlName="codigoDeBarras" pInputText id="codigoDeBarras"
-              type="number" [style.background-color]="editando ? '#f2f2f2' : 'white' " >
+              type="text" [style.background-color]="editando ? '#f2f2f2' : 'white' " >
           </div>
 
           <div class="p-field p-col-12 p-md-4 p-fluid p-field-mobile-none"></div>
