--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  min-height:100vh;
   font-family: Arial, Helvetica, sans-serif;
   color: #404C51;
   background-color: whitesmoke;
